data/contextbench_phase1/stripped/generated_memory_text_from_stripped_adp/000154_7fc95e34-ecb2-46e9-8c0c-bc4841dea0c7.txt
PRIOR EXPERIENCE MEMORY
This is read-only prior trajectory evidence for OpenHands.
Use it as context only; verify all behavior in the current workspace.

SOURCE
------
- trajectory_id: 7fc95e34-ecb2-46e9-8c0c-bc4841dea0c7
- repo: matplotlib/matplotlib
- instance_id: matplotlib__matplotlib-24265
- base_commit: e148998d9bed9d1b53a91587ad48f9bb43c7737f
- model: claude-sonnet-4-5-20250929

PRIOR PROBLEM
-------------
[Bug]: Setting matplotlib.pyplot.style.library['seaborn-colorblind'] result in key error on matplotlib v3.6.1
### Bug summary

I have code that executes:
```
import matplotlib.pyplot as plt
the_rc = plt.style.library["seaborn-colorblind"]
```

Using version 3.4.3 of matplotlib, this works fine. I recently installed my code on a machine with matplotlib version 3.6.1 and upon importing my code, this generated a key error for line `the_rc = plt.style.library["seaborn-colorblind"]` saying "seaborn-colorblind" was a bad key.

### Code for reproduction

```python
import matplotlib.pyplot as plt
the_rc = plt.style.library["seaborn-colorblind"]
```


### Actual outcome

Traceback (most recent call last):
KeyError: 'seaborn-colorblind'

### Expected outcome

seaborn-colorblind should be set as the matplotlib library style and I should be able to continue plotting with that style.

### Additional information

- Bug occurs with matplotlib version 3.6.1
- Bug does not occur with matplotlib version 3.4.3
- Tested on MacOSX and Ubuntu (same behavior on both)

### Operating system

OS/X

### Matplotlib Version

3.6.1

### Matplotlib Backend

MacOSX

### Python version

3.9.7

### Jupyter version

_No response_

### Installation

pip

FILES INSPECTED
---------------
- lib/matplotlib/style/core.py [Read: 2]

SEARCH ANCHORS
--------------
- [3] Glob path='testbed' glob='**/style/**/*.py'

TEST / DIAGNOSTIC / OTHER COMMANDS
----------------------------------
- [other/reproduction]
- [diagnostic] ls -la testbed 2>&1 | head -20
- [diagnostic] ls testbed/lib/matplotlib/mpl-data/stylelib/ | grep seaborn
- [test] python test_issue.py
- [test] python test_issue.py
- [other/reproduction] python --version && python3 --version
- [test] python3 test_issue.py
- [test] python3 test_issue.py
- [test] python3 test_comprehensive.py

OBSERVED TEST / RUNTIME FAILURES
--------------------------------
- Traceback (most recent call last):
- FAILED: KeyError - 'seaborn-colorblind'

RELEVANT OBSERVATION EXCERPTS
-----------------------------
- [Glob Result after action #3]
  ./swebench_9_15/testbed/lib/matplotlib/style/__init__.py
  ./swebench_9_15/testbed/lib/matplotlib/style/core.py
- [Read Result after action #5]
       1→"""
       2→Core functions and attributes for the matplotlib style library:
       3→
       4→``use``
       5→    Select style sheet to override the current matplotlib settings.
       6→``context``
       7→    Context manager to use a style sheet temporarily.
       8→``available``
       9→    List available style sheets.
      10→``library``
      11→    A dictionary of style names and matplotlib settings.
      12→"""
      13→
      14→import contextlib
      15→import logging
      16→import os
      17→from pathlib import Path
      18→import re
      19→import warnings
      20→
      21→import matplotlib as mpl
      22→from matplotlib import _api, _docstring, rc_params_from_file, rcParamsDefault
      23→
      24→_log = logging.getLogger(__name__)
      25→
      26→__all__ = ['use', 'context', 'available', 'library', 'reload_library']
      27→
      28→
      29→@_api.caching_module_getattr  # module-level deprecations
      30→class __getattr__:
      31→    STYLE_FILE_PATTERN = _api.deprecated("3.5", obj_type="")(property(
      32→        lambda self: re.compile(r'([\S]+).%s$' % STYLE_EXTENSION)))
      33→
      34→
      35→BASE_LIBRARY_PATH = os.path.join(mpl.get_data_path(), 'stylelib')
      36→# Users may want multipl
  [... truncated ...]
- [Diagnostic Output after action #7]
  seaborn-v0_8-bright.mplstyle
  seaborn-v0_8-colorblind.mplstyle
  seaborn-v0_8-dark-palette.mplstyle
  seaborn-v0_8-dark.mplstyle
  seaborn-v0_8-darkgrid.mplstyle
  seaborn-v0_8-deep.mplstyle
  seaborn-v0_8-muted.mplstyle
  seaborn-v0_8-notebook.mplstyle
  seaborn-v0_8-paper.mplstyle
  seaborn-v0_8-pastel.mplstyle
  seaborn-v0_8-poster.mplstyle
  seaborn-v0_8-talk.mplstyle
  seaborn-v0_8-ticks.mplstyle
  seaborn-v0_8-white.mplstyle
  seaborn-v0_8-whitegrid.mplstyle
  seaborn-v0_8.mplstyle
- [Test Output after action #13]
  Exit code 1
    File "test_issue.py", line 12
      print(f"Type: {type(the_rc)}")
                                  ^
  SyntaxError: invalid syntax
- [Test Output after action #15]
  Exit code 1
  Traceback (most recent call last):
    File "test_issue.py", line 6, in <module>
      import matplotlib.pyplot as plt
    File "./swebench_9_15/testbed/lib/matplotlib/__init__.py", line 102
  SyntaxError: Non-ASCII character '\xc2' in file ./swebench_9_15/testbed/lib/matplotlib/__init__.py on line 103, but no encoding declared; see http://www.python.org/peps/pep-0263.html for details
- [Test Output after action #19]
  Testing access to seaborn-colorblind style...
  FAILED: KeyError - 'seaborn-colorblind'
  Available seaborn styles in library:
    - seaborn-v0_8
    - seaborn-v0_8-bright
    - seaborn-v0_8-colorblind
    - seaborn-v0_8-dark
    - seaborn-v0_8-dark-palette
    - seaborn-v0_8-darkgrid
    - seaborn-v0_8-deep
    - seaborn-v0_8-muted
    - seaborn-v0_8-notebook
    - seaborn-v0_8-paper
    - seaborn-v0_8-pastel
    - seaborn-v0_8-poster
    - seaborn-v0_8-talk
    - seaborn-v0_8-ticks
    - seaborn-v0_8-white
    - seaborn-v0_8-whitegrid
  Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

    Traceback (most recent call last):
      File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
        exec(line)
      File "<string>", line 1, in <module>
      File "<frozen importlib._bootstrap>", line 553, in module_from_spec
    AttributeError: 'NoneType' object has no attribute 'loader'

  Remainder of file ignored
- [Read Result after action #21]
     247→# Load style library
     248→# ==================
     249→_base_library = read_style_directory(BASE_LIBRARY_PATH)
     250→library = None
     251→available = []
     252→
     253→
     254→def reload_library():
     255→    """Reload the style library."""
     256→    global library
     257→    library = update_user_library(_base_library)
     258→    available[:] = sorted(library.keys())
     259→
     260→
     261→reload_library()
     262→

- [Test Output after action #24]
  Testing access to seaborn-colorblind style...
  SUCCESS: seaborn-colorblind is accessible
  Type: <class 'matplotlib.RcParams'>
  Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

    Traceback (most recent call last):
      File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
        exec(line)
      File "<string>", line 1, in <module>
      File "<frozen importlib._bootstrap>", line 553, in module_from_spec
    AttributeError: 'NoneType' object has no attribute 'loader'

  Remainder of file ignored
- [Test Output after action #27]
  Testing access to deprecated seaborn styles...
    ✓ seaborn -> accessible (same as seaborn-v0_8)
    ✓ seaborn-bright -> accessible (same as seaborn-v0_8-bright)
    ✓ seaborn-colorblind -> accessible (same as seaborn-v0_8-colorblind)
    ✓ seaborn-dark -> accessible (same as seaborn-v0_8-dark)
    ✓ seaborn-darkgrid -> accessible (same as seaborn-v0_8-darkgrid)
    ✓ seaborn-dark-palette -> accessible (same as seaborn-v0_8-dark-palette)
    ✓ seaborn-deep -> accessible (same as seaborn-v0_8-deep)
    ✓ seaborn-muted -> accessible (same as seaborn-v0_8-muted)
    ✓ seaborn-notebook -> accessible (same as seaborn-v0_8-notebook)
    ✓ seaborn-paper -> accessible (same as seaborn-v0_8-paper)
    ✓ seaborn-pastel -> accessible (same as seaborn-v0_8-pastel)
    ✓ seaborn-poster -> accessible (same as seaborn-v0_8-poster)
    ✓ seaborn-talk -> accessible (same as seaborn-v0_8-talk)
    ✓ seaborn-ticks -> accessible (same as seaborn-v0_8-ticks)
    ✓ seaborn-white -> accessible (same as seaborn-v0_8-white)
    ✓ seaborn-whitegrid -> accessible (same as seaborn-v0_8-whitegrid)

  ==================================================
  All tests PASSED!

  ==================================================
  Testing plt.style.use()
  [... truncated ...]

SOURCE EDIT EVIDENCE
--------------------
- lib/matplotlib/style/core.py
  Tool: Edit action #23
  old_text_sha256: 4e596802b43fa7ba952b9ff4dc38a175c3f63815c7f122fdb649aa066240c59a
  new_text_sha256: 656fe5a2f615a55d5e4e83614b277fbcc788aa66b3aadd1f12517a94753f44ec
- swebench_9_15/test_comprehensive.py
  Tool: Write action #26
  new_text_sha256: db73130027c386805bc2d726b78aa220748b47ff0b8f0e9362a33f494606d0f8

PRIOR AGENT FINAL MESSAGE
-------------------------
(none)

INJECTION WARNING
-----------------
This memory is from a prior related issue. Use it as evidence only. Do not copy patches blindly.
